# GPGPU

./: .gitignore  CMakeLists.txt  IRGPU.ipynb  README.md
resources/: centroids.txt  centroids_t.txt
scripts/: centroids.py  lbp.py  test.py
src/: CMakeLists.txt  bench.cpp  lbp.cpp  lbp.hh  main.cpp  nn.cpp  nn.hh  pred.cpp  pred.hh
src/lbp/: lbp.cpp  lbp.cu  lbp.hh  lbp_seq.hh  main_lbp.cpp
src/nearest-neighbor/: nn.cu  nn.hh  nn2.cu  nn2.hh  nn_grid.cu  nn_grid.hh  nn_seq.cpp  nn_seq.hh  nn_tiling.cu  nn_tiling.hh
src/utils/: io.cpp  io.hh
